[gd_scene load_steps=8 format=2]

[ext_resource path="res://juego/UI/HUD/Recurso 1fondoMinmapa.png" type="Texture" id=1]
[ext_resource path="res://juego/UI/HUD/iconos/Player.png" type="Texture" id=2]
[ext_resource path="res://juego/UI/HUD/MinoMapa.gd" type="Script" id=3]
[ext_resource path="res://juego/UI/HUD/iconos/EstacionRecarga.png" type="Texture" id=4]
[ext_resource path="res://juego/UI/HUD/iconos/BaseEnemiga.png" type="Texture" id=5]
[ext_resource path="res://juego/UI/HUD/iconos/Rele.png" type="Texture" id=6]
[ext_resource path="res://juego/UI/HUD/iconos/Interceptor.png" type="Texture" id=7]

[node name="MinoMapa" type="MarginContainer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -144.0
margin_top = -162.0
margin_right = 144.0
rect_min_size = Vector2( 288, 162 )
script = ExtResource( 3 )

[node name="CuadradoMiniMapa" type="NinePatchRect" parent="."]
margin_right = 288.0
margin_bottom = 162.0
texture = ExtResource( 1 )

[node name="ContenedorDeIconos" type="MarginContainer" parent="CuadradoMiniMapa"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ZonaRenderizadoMiniMapa" type="TextureRect" parent="CuadradoMiniMapa/ContenedorDeIconos"]
margin_right = 288.0
margin_bottom = 162.0

[node name="IconoPlayer" type="Sprite" parent="CuadradoMiniMapa/ContenedorDeIconos/ZonaRenderizadoMiniMapa"]
position = Vector2( 146, 82 )
rotation = 1.5708
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="IconoBaseEnemiga" type="Sprite" parent="CuadradoMiniMapa/ContenedorDeIconos/ZonaRenderizadoMiniMapa"]
visible = false
modulate = Color( 0.71875, 0.0329895, 0.0329895, 1 )
position = Vector2( 193, 114 )
rotation = 1.5708
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 5 )

[node name="IconoBaseRecarga" type="Sprite" parent="CuadradoMiniMapa/ContenedorDeIconos/ZonaRenderizadoMiniMapa"]
visible = false
modulate = Color( 0.691406, 0.0533409, 0.638234, 0.97 )
position = Vector2( 208, 57 )
rotation = 1.5708
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="IconoRele" type="Sprite" parent="CuadradoMiniMapa/ContenedorDeIconos/ZonaRenderizadoMiniMapa"]
visible = false
modulate = Color( 0, 0.709804, 0.298039, 0.968627 )
position = Vector2( 208, 57 )
rotation = 1.5708
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )

[node name="IconoInterceptor" type="Sprite" parent="CuadradoMiniMapa/ContenedorDeIconos/ZonaRenderizadoMiniMapa"]
visible = false
modulate = Color( 9.09, 0.47, 0.05, 0.73 )
position = Vector2( 209, 106 )
rotation = 1.5708
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="TweenVisibilidad" type="Tween" parent="."]

[node name="TimerVisibilidad" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="TimerVisibilidad" to="." method="_on_TimerVisibilidad_timeout"]
